# tauri-superapp

./: Cargo.toml  Makefile.toml  README.md
main/: Cargo.toml
main/src/: app.rs  main.rs
main/web/: index.html
superapp/: Cargo.toml  Tauri.toml
superapp/src/: lib.rs  main.rs
wapp_a/: Cargo.toml
wapp_a/src/: main.rs
wapp_a/web/: index.html
